--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
   <div class="row skills-content">
 
-    <div class="col-lg-6">
+    <div class="col-lg-4">
 
       <div class="progress">
         <span class="skill">PANDAS <i class="val">95%</i></span>
@@ -284,6 +284,7 @@
         </div>
       </div>
 
+      
       <!-- <div class="progress">
         <span class="skill">RAY TUNE <i class="val">65%</i></span>
         <div class="progress-bar-wrap">
@@ -307,7 +308,7 @@
 
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-4">
 
       <div class="progress">
         <span class="skill">MATPLOTLIB <i class="val">60%</i></span>
@@ -323,7 +324,17 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-4">
+      <div class="progress">
+        <span class="skill">MATPLOTLIB <i class="val">60%</i></span>
+        <div class="progress-bar-wrap">
+          <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      
+    </div>
   </div>
+  
 <!-- Tools section END-->
   
 </div><!-- End Skills -->
