--- a/index.html
+++ b/index.html
@@ -476,50 +476,64 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Known Technology</h4>
+            <p><em></em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>ML/AI</li>
+              <li>Web Technology</li>
+              <li>IoT</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Bachelor of Science In Computer Application</h4>
+            <h5>2014 - 2017</h5>
+            <p><em>Ranchi University, Ranchi, JHARKHAND</em></p>
+            <ul>
+              <li>Percentage: 75.17</li>
+            </ul>
           </div>
-          <div class="resume-item">
+          <!-- <div class="resume-item">
             <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
             <h5>2010 - 2014</h5>
             <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
             <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-          </div>
+          </div> -->
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>ML/AI Engineer</h4>
+            <h5>Jan 2021 - Present</h5>
+            <p><em>Honeysys, Banglore, India </em></p>
+            <h6 class="project-title">E-Com Chatbot</h6>
+            <h4 class="project-heading"><em>Project Discription</em></h4>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>APIs based disctributed system</li>
+              <li>Distributed into 3 service</li>
+              <li>Data Preparation , Data Modeling ,Model loader </li>
+              <li>Technology used: Web, Deep Learning</li>
+              <li>Language: python </li>
+              <li>Frameworks/Tools: PyTorch,FastApi,pandas,numpy,request,uvicorn</li>
             </ul>
+            </p>
+            <h4 class="project-heading"><em>Role &amp; Responsbility</em></h4>
+            
+            <p>
+              <ul>
+                <li>Designed/Developed overall system</li>
+                <li>Lead a team of 2 member</li>
+              </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Software Engineer</h4>
+            <h5>Aug 2019 - Jan 2021</h5>
+            <p><em>Digiadd Technology, Banglore, India</em></p>
             <p>
             <ul>
               <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
@@ -529,6 +543,49 @@
             </ul>
             </p>
           </div>
+
+          <div class="resume-item">
+            <h4>Embedded Software Developer</h4>
+            <h5>Mar 2019 - Aug 2019</h5>
+            <p><em>Alpha lab, Banglore, India </em></p>
+            <p>
+            <ul>
+              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>Junior java Developer</h4>
+            <h5>Jan 2019 - Mar 2019</h5>
+            <p><em>RCS Technology, Banglore, India </em></p>
+            <p>
+            <ul>
+              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+            </ul>
+            </p>
+          </div>
+
+          <div class="resume-item">
+            <h4>System Administrator</h4>
+            <h5>Jan 2019 - Mar 2019</h5>
+            <p><em>Medha Hosting, Banglore, India </em></p>
+            <p>
+            <ul>
+              <li>manag window</li>
+              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+            </ul>
+            </p>
+          </div>
+
         </div>
       </div>
 
