--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1><a href="index.html">Vishnu Singh</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-      <h2>I'm a <span>Software Engineer</span></h2>
+      <h2><span>Machine Learning/AI Engineer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -53,7 +53,7 @@
 
       <div class="social-links">
         <a href="https://twitter.com/vishnusingh1847" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.instagram.com/vishnu_singh_1847/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <!-- <a href="https://www.instagram.com/vishnu_singh_1847/" class="instagram"><i class="bi bi-instagram"></i></a> -->
         <a href="https://www.linkedin.com/in/vishnu-singh-a71816169/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
